_common.css
/* ... */
.bywr-accordion .accordion-button:after {
	filter: invert(1);
}
.bywr-sidebar-header,
.bywr-accordion .bywr-sidebar-option {
	display: flex;
	align-items: center;
	padding: 0.75rem;
}
.bywr-accordion .bywr-sidebar-option {
	flex-grow: 1;
}
.bywr-sidebar-header,
.bywr-accordion .accordion-button,
.bywr-accordion .bywr-sidebar-option {
	background: var(--dark-clear);
	border-width: 0 0 1px 0 !important;
	border-style: solid !important;
	border-color: var(--light-transparent) !important;
}
.p-2o5 {
	padding: 0.75rem !important;
}
/* === SIDEBAR === */
.bywr-sidebar {
	position: fixed;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	height: 100vh;
	width: var(--sidebar-width);
	margin: 0;
	z-index: 99;
	overflow: hidden;
}
.bywr-sidebar-options {
	flex-grow: 1;
	overflow-y: auto;
	overflow-x: hidden;
	border-width: 0 0 1px 0 !important;
	border-style: solid !important;
	border-color: var(--light-transparent) !important;
}
.bywr-sidebar.bywr-sidebar-expanded {
	width: var(--sidebar-expanded-width);
	overflow-y: auto;
}
.bywr-sidebar:not(.bywr-sidebar-expanded) .bywr-sidebar-content {
	opacity: 0;
	visibility: hidden;
}
.bywr-sidebar-toggle {
	position: absolute;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	height: var(--sidebar-height);
	width: var(--sidebar-width);
	background: #000;
	top: 0;
	right: 0;
	padding: 0.5rem;
	border: 1px solid var(--light-clear);
	outline: 1px solid var(--light-clear);
}
.bywr-sidebar-hidden {
	position: absolute;
	display: none;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	width: var(--sidebar-width);
	top: var(--sidebar-height);
	bottom: 0;
	right: 0;
	padding: 0.5rem;
	gap: 1rem;
	opacity: 0;
}
.bywr-sidebar:not(.bywr-sidebar-expanded) .bywr-sidebar-hidden {
	display: flex;
	opacity: 1;
}
.app-container {
	position: relative;
	min-height: 100vh;
	width: 100%;
	padding: 0.75rem 0.5rem 0.75rem calc(0.5rem + var(--sidebar-width));
	overflow-x: hidden;
	overflow-y: auto;
	z-index: 9;
}
.app-container.bywr-sidebar-expanded {
	padding-left: calc(0.5rem + var(--sidebar-expanded-width));
}
@media (max-width: 768px) {
	.bywr-sidebar.bywr-sidebar-expanded {
		width: 100vw;
	}
	.app-container {
		padding: 0.5rem 0.5rem 0.5rem calc(0.5rem + var(--sidebar-width));
	}
	.app-container.bywr-sidebar-expanded {
		padding-left: 0.5rem;
	}
	.bywr-sidebar-hidden {
		pointer-events: none;
	}
}
@media (max-width: 576px) {
	.bywr-sidebar {
		height: var(--sidebar-height);
		width: 100vw;
	}
	.bywr-sidebar.bywr-sidebar-expanded {
		height: 100vh;
	}
	.bywr-sidebar:not(.bywr-sidebar-expanded) .bywr-sidebar-content {
		opacity: 1;
		visibility: visible;
	}
	.app-container {
		padding: var(--sidebar-width) 0.5rem 0.5rem 0.5rem;
	}
	.app-container.bywr-sidebar-expanded {
		padding-top: 0.5rem;
	}
	.bywr-sidebar:not(.bywr-sidebar-expanded) .bywr-sidebar-hidden {
		display: none;
	}
}
/* == APP CONTAINER CONTENT === */
.app-content {
	position: relative;
	background: linear-gradient(to bottom, #fefefe 0%, #fff 100%);
	border: 1px solid #ccc;
	box-shadow: 0 2px #fff inset;
}
.app-content .container-fluid {
	padding: 2rem 4rem;
}
@media (max-width: 991.98px) {
	.app-content .container-fluid {
		padding: 1rem 2rem;
	}
}
.app-content,
.app-content * {
	text-shadow: 0 1px #fff;
}
.app-content:before,
.app-content:after {
	content: "";
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	z-index: -9;
	border: 1px solid #ccc;
}
.app-content:before {
	transform: rotate(-0.75deg);
	background: linear-gradient(to top, #ddd 0%, var(--light-color) 100%);
}
.app-content:after {
	transform: rotate(1.25deg);
	background: linear-gradient(to bottom, #fff 0%, var(--light-color) 100%);
}
.app-title {
	text-align: center;
}
.app-title:before,
.app-title:after {
	content: "";
	position: absolute;
	height: 1px;
	width: 25%;
}
.app-title:before {
	left: 5%;
	background: linear-gradient(to left, #ddd 0%, #fff 100%);
}
.app-title:after {
	right: 5%;
	background: linear-gradient(to right, #ddd 0%, #fff 100%);
}
/* === LANG BUTTONS === */
.a-lang {
	background: var(--dark-color);
	color: var(--light-color);
	text-align: center;
	border: 1px solid var(--light-color);
	margin: 0.25rem;
	padding: 0.5rem;
	white-space: nowrap;
}
.a-lang img {
	width: 1rem;
	height: 0.75rem;
	margin-bottom: 0.25rem;
}
/* --- ACCESSIBILITY --- */
#bywr-accessibility {
	position: fixed;
	top: 12.5vh;
	right: 0;
}
#bywr-accessibility,
#bywr-accessibility-buttons {
	display: flex;
	flex-direction: column;
	align-items: end;
	flex-wrap: wrap;
	gap: 0.25rem;
	z-index: 1001;
	transform-origin: right;
}
#bywr-accessibility-buttons {
	max-height: 90vh;
}
@media (max-width: 576px) {
	#bywr-accessibility {
		top: 17.5vh;
	}
	#bywr-accessibility-buttons {
		max-height: 85vh;
	}
}
#bywr-accessibility a {
	display: flex;
	align-items: center;
	justify-content: center;
	height: 3rem;
	width: 3rem;
	padding: 1.5rem 0;
	background-color: #009;
	color: #fff;
	border-radius: 0;
	text-align: center;
	font-size: 1.5rem;
}
#bywr-accessibility a:hover {
	background-color: #00d;
	color: #eee !important;
}
#bywr-accessibility-buttons.hide {
	transform: scaleX(0);
	width: 0;
	height: 0;
}
.no-motion * {
	-webkit-transition: none !important;
	-o-transition: none !important;
	-ms-transition: none !important;
	-moz-transition: none !important;
	transition: none !important;
}
.dyslexia {
	font-family: "Open Dyslexic" !important;
}
.word-spacing {
	letter-spacing: 0.125rem !important;
}
.highlight-links a {
	border: 2px solid #7777 !important;
}
.protanopia {
	filter: sepia(100%) saturate(70%) hue-rotate(-17deg);
}
.deuteranopia {
	filter: sepia(100%) saturate(70%) hue-rotate(-42deg);
}
.tritanopia {
	filter: sepia(100%) saturate(60%) hue-rotate(180deg);
}
.monochropia {
	filter: grayscale(100%);
}
.invertchropia {
	filter: invert(100%);
}
/* ... */

